--- a/individual_project.ipynb
+++ b/individual_project.ipynb
@@ -2408,6 +2408,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "take-aways:\n",
+    "\n",
+    "able to see the amount of employees by ethnicity, gender and years employed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Split Data"
    ]
   },
@@ -2890,7 +2899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More men than women are making more than $150,000 working at the city"
+    "More men than women are making more than $100,000 working at the city"
    ]
   },
   {
